Downgrade necessary Java version to 8