@@ -5,6 +5,7 @@ import java.io.DataOutput;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import cuchaz.enigma.network.ClientPacketHandler;
 import cuchaz.enigma.network.EnigmaServer;
@@ -47,7 +48,7 @@ public class SyncMappingsS2CPacket implements Packet<ClientPacketHandler> {
 
 	@Override
 	public void write(DataOutput output) throws IOException {
-		List<EntryTreeNode<EntryMapping>> roots = mappings.getRootNodes().toList();
+		List<EntryTreeNode<EntryMapping>> roots = mappings.getRootNodes().collect(Collectors.toList());
 		output.writeInt(roots.size());
 		for (EntryTreeNode<EntryMapping> node : roots) {
 			writeEntryTreeNode(output, node);
